--- a/main.html
+++ b/main.html
@@ -50,7 +50,7 @@
               <i class="fas fa-search main-color"></i>
             </button>
 
-            <input type="text" placeholder="search" name="search" class="text-center" autocomplete="off">
+            <input type="text" placeholder="search" name="search" class="form-control text-center" autocomplete="off">
           </form>
         </div>
       </div>
