--- a/index.html
+++ b/index.html
@@ -11,57 +11,57 @@
 
 </head>
 
-<body>
-	<main>
-		<div class="form">
-			<h1>Mascara</h1>
-			<ul class="tab-group">
-				<li class="tab active" id="rc"><a href="#signup">Sign Up</a></li>
-				<li class="tab" id="ac"><a href="#login">Log In</a></li>
-			</ul>
+<body class="loginpage">
+    <main>
+        <div class="form">
+            <h1>Mascara</h1>
+            <ul class="tab-group">
+                <li class="tab active" id="rc"><a href="#signup">Sign Up</a></li>
+                <li class="tab" id="ac"><a href="#login">Log In</a></li>
+            </ul>
 
-			<div class="tab-content">
-				<div id="signup">
-					<form action="/" method="post">
+            <div class="tab-content">
+                <div id="signup">
+                    <form action="/" method="post">
 
-						<div class="field-wrap">
-							<input type="text" placeholder="user Name" class="form-control" required
-								autocomplete="off" />
-						</div>
-						<div class="field-wrap">
-							<input type="email" placeholder="Email" required autocomplete="off" class="form-control" />
-						</div>
+                        <div class="field-wrap">
+                            <input type="text" placeholder="user Name" class="form-control" required
+                                autocomplete="off" />
+                        </div>
+                        <div class="field-wrap">
+                            <input type="email" placeholder="Email" required autocomplete="off" class="form-control" />
+                        </div>
 
-						<div class="field-wrap">
-							<input type="password" required autocomplete="off" placeholder="Password"
-								class="form-control" />
-						</div>
-						<div class="log">
-							<a class="button button-block" href="main.html">Sign Up</a>
-							<li class="tab"><a class="up" onclick="addRemoveClass()" href="#login">I already have
-									account</a></li>
-						</div>
-					</form>
-				</div>
-				<div id="login">
-					<form action="/" method="post">
-						<div class="field-wrap">
-							<input type="email" class="form-control" placeholder="Email" required autocomplete="off" />
-						</div>
-						<div class="field-wrap">
-							<input type="password" class="form-control" placeholder="Password" required
-								autocomplete="off" />
-						</div>
-						<a class="button button-block" href="main.html" />Log In</a>
-						<a href="#" class="up">Forgot Password?</a>
-					</form>
+                        <div class="field-wrap">
+                            <input type="password" required autocomplete="off" placeholder="Password"
+                                class="form-control" />
+                        </div>
+                        <div class="log">
+                            <a class="button button-block" href="main.html">Sign Up</a>
+                            <li class="tab"><a class="up" onclick="addRemoveClass()" href="#login">I already have
+                                    account</a></li>
+                        </div>
+                    </form>
+                </div>
+                <div id="login">
+                    <form action="/" method="post">
+                        <div class="field-wrap">
+                            <input type="email" class="form-control" placeholder="Email" required autocomplete="off" />
+                        </div>
+                        <div class="field-wrap">
+                            <input type="password" class="form-control" placeholder="Password" required
+                                autocomplete="off" />
+                        </div>
+                        <a class="button button-block" href="main.html" />Log In</a>
+                        <a href="#" class="up">Forgot Password?</a>
+                    </form>
 
-				</div>
+                </div>
 
-			</div>
+            </div>
 
-		</div>
-	</main>
+        </div>
+    </main>
     <script src="js/jquery-3.5.1.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/all.min.js"></script>
