--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/all.css">
   <link rel="stylesheet" href="css/jquery.fancybox.min.css">
+  <link rel="stylesheet" href="css/owl.carousel.css">
+  <link rel="stylesheet" href="css/owl.theme.default.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -418,26 +420,17 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-md-4">
+          <div class="owl-carousel client-carousel">
             <img src="img/download.png" class="img-fluid h-8" alt="">
-          </div>
-          <div class="col-md-4">
             <img src="img/download.png" class="img-fluid h-8" alt="">
-          </div>
-          <div class="col-md-4">
             <img src="img/d8aee0e7f918064bf6d287dcf8db3d8a.jpg" class="img-fluid h-8" alt="">
+            <img src="img/download (1).jpg" class="img-fluid down1" alt="">
+            <img src="img/fav3.png" class="img-fluid h-5" alt="">
+            <img src="img/fav4.png" class="img-fluid h-5" alt="">
           </div>
-          <div class="col-sm-4"></div>
-          <div class="col-sm-4"><img src="img/download (1).png" class="img-fluid down1" alt=""></div>
-          <div class="col-sm-4"></div>
-          <div class="col-sm-4"></div>
-          <div class="col-sm-4"><img src="img/fav3.png" class="img-fluid h-5" alt=""></div>
-          <div class="col-sm-4"></div>
-          <div class="col-sm-4"></div>
-          <div class="col-sm-4"><img src="img/fav4.png" class="img-fluid h-5" alt=""></div>
-          <div class="col-sm-4"></div>
         </div>
       </div>
+    </div>
     </section>
     <section class="why">
       <div class="site-section">
@@ -462,58 +455,49 @@
     </section>
     <section class="footer">
       <div class="container">
-        <div class="site-section">
-          <h2 class="text-center">Mascara</h2>
-        </div>
         <div class="row">
           <div class="col-md-4">
+            <div class="site-section">
+              <h2 class="text-center">Mascara</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia asperiores id qui accusamus inventore quos at aperiam nulla natus soluta ipsa fugit, deserunt impedit maiores dolore culpa, nam similique nesciunt.</p>
+            </div>
+          </div>
+          <div class="col-md-1"></div>
+          <div class="col-md-3">
             <i class="fa-2x fas fa-bars"></i>
             <h4>Menu</h4>
             <div class="links">
-              <a href="#">Home</a>
-              <a href="#">About</a>
-              <a href="#">contact us</a>
-              <a href="#">Something else</a>
+              <a href="#" class="d-block">Home</a>
+              <a href="#" class="d-block">About</a>
+              <a href="#" class="d-block">contact us</a>
+              <a href="#" class="d-block">Something else</a>
             </div>
           </div>
           <div class="col-md-4">
             <i class="fas fa-phone-alt fa-2x phone"></i>
             <h5 class="d-inline ml-2">Call us</h5>
             <a href="#" class="d-block">01273592417</a>
-          </div>
-          <div class="col-md-4">
             <h5>Follow us</h5>
             <div class="social">
-              <div class="row">
-                <div class="col-lg-12">
-                  <a href="#">
+                  <a href="#" class="ml-3">
                     <img src="img/facebook.png" class="img-fluid" alt="">
                   </a>
-                </div>
-                <div class="col-lg-12">
-                  <a href="#">
+                  <a href="#" class="ml-3">
                     <img src="img/youtube.webp" class="img-fluid" alt="">
                   </a>
-                </div>
-                <div class="col-lg-12">
-                  <a href="#">
+                  <a href="#" class="ml-3">
                     <img src="img/twitter.png" class="img-fluid" alt="">
                   </a>
-                </div>
-                <div class="col-lg-12">
-                  <a href="#">
+                  <a href="#" class="ml-3">
                     <img src="img/instgram.jpg" class="img-fluid" alt="">
                   </a>
-                </div>
-                <h6 class="float-right mt-3">Copyright ©
-                  <script>document.write(new Date().getFullYear());</script> Brandup Middle East Inc . All Rights
-                  Reserved .
-                </h6>
-
               </div>
             </div>
           </div>
-        </div>
+        <h6 class="text-center mt-3">Copyright ©
+          <script>document.write(new Date().getFullYear());</script> Brandup Middle East Inc . All Rights
+          Reserved .
+        </h6>
       </div>
     </section>
   </div>
@@ -521,7 +505,8 @@
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.js"></script>
   <script src="js/jquery.fancybox.min.js"></script>
-  <script src="js/all.min.jsx"></script>
+  <script src="js/owl.carousel.js"></script>
+  <script src="js/all.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 
